Fix grant access success block (dark mode)

--- a/.vitepress/theme/tailwind-output.css
+++ b/.vitepress/theme/tailwind-output.css
@@ -571,6 +571,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -581,6 +585,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .inline-block {
@@ -728,6 +736,23 @@ video {
 
 .dark {
   --on-bg-success: rgb(60, 60, 67);
+}
+
+.white-block-for-address {
+  margin-top: 0.25rem;
+  word-break: break-all;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 229 229 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .hover\:bg-grey-800:hover {
