--- a/components/input.css
+++ b/components/input.css
@@ -29,3 +29,7 @@
 .dark {
   --on-bg-success: rgb(60, 60, 67);
 }
+
+.white-block-for-address {
+  @apply mt-1 text-sm rounded border border-neutral-200 bg-white px-2 py-2 break-all;
+}
